completed fixed nav bar stretch

--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,8 @@ p {
   margin: 0 auto;
 }
 .navbar {
+  position: fixed;
+  opacity: 0.7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -207,6 +209,9 @@ footer {
   .home {
     width: 100%;
   }
+}
+.home .intro {
+  padding-top: 80px;
 }
 @media (max-width: 500px) {
   .home .intro {
