--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,10 +3,11 @@
 .home {
   @media @mobile {
     width: 100%;
-    // .flex-align();
+    
   }
 
   .intro {
+    padding-top: 80px;
     @media @mobile {
       .flex-align();
       justify-content: center;
@@ -49,9 +50,6 @@
     img {
 
       @media @mobile {
-        // width: 90%;
-        // align-content: center;
-
         .mobile-pic();
       }
       width: 28%;
