--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,7 @@
 // Navigation code here
 .navbar {
+    position: fixed;
+    opacity: .7;
     @media @mobile {
         width: 100%;
     }
